another attempt at logo truncation fix

--- a/css/main.css
+++ b/css/main.css
@@ -697,13 +697,13 @@ nav ul li:last-of-type {
 }
 
 .site-title {
-    width: 100%;
+    width: 143px;
     position: absolute;
     cursor: pointer;
     top: 26.5px;
 }
 .logo-svg {
-    /*max-width: 100%;*/
+    max-width: 100%;
     height: 14px;
     margin: 0 10px 0 0;
     overflow: visible !important;
@@ -748,8 +748,11 @@ nav ul li:last-of-type {
 }
 
 #home .logo-svg {
-    /*max-width: 100%;*/
-    height: 10px;
+    max-width: 100%;
+    height: 14px;
+    margin: 0 10px 0 0;
+    overflow: visible !important;
+    white-space: normal !important;
 }
 
 .hamburger {
